syntax = "proto3";

package proto;

message SimpleRequest{
    string data = 1;
}

message SimpleResponse {
    int32 code = 1;
    string result = 2;
}

service StreamService {
    rpc DownloadPackage(SimpleRequest) returns (stream SimpleResponse){};
}